cloud/blockstore/tools/csi_driver/deploy/manifests/5-csi-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nbs-csi-driver-controller
  namespace: nbs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "nbs-csi-controller-app"
  template:
    metadata:
      labels:
        app: "nbs-csi-controller-app"
    spec:
      hostNetwork: true
      serviceAccountName: nbs-csi-controller-sa
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: nbs-csi-controller
      containers:
        - name: csi-provisioner
          image: registry.k8s.io/sig-storage/csi-provisioner:v3.6.2
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=/csi/csi.sock"
            - "--feature-gates=Topology=true"
            - "--http-endpoint=:22011"
            - "--leader-election-namespace=$(NBS_CSI_NAMESPACE)"
            - "--timeout=250s"
            - "--leader-election"
          ports:
            - containerPort: 22011
              name: http-endpoint
              protocol: TCP
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /healthz/leader-election
              port: http-endpoint
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
        - name: csi-attacher
          image: registry.k8s.io/sig-storage/csi-attacher:v4.4.2
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=/csi/csi.sock"
            - "--http-endpoint=:22012"
            - "--leader-election"
            - "--leader-election-namespace=$(NBS_CSI_NAMESPACE)"
            - "--timeout=250s"
          ports:
            - containerPort: 22012
              name: http-endpoint
              protocol: TCP
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /healthz/leader-election
              port: http-endpoint
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
        - name: csi-nbs-driver
          image: nbs-csi-driver:latest
          imagePullPolicy: IfNotPresent
          args:
            - "--name=nbs.csi.nebius.ai"
            - "--version=$(DRIVER_VERSION)"
            - "--node-id=$(KUBE_NODE_NAME)"
            - "--endpoint=/csi/csi.sock"
            - "--nfs-vhost-port=0"
            - "--nfs-server-port=0"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
      volumes:
        - name: socket-dir
          emptyDir: {}
