cloud/blockstore/tools/csi_driver/deploy/manifests/6-csi-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nbs-csi-driver-node
  namespace: nbs
spec:
  selector:
    matchLabels:
      app: "nbs-csi-node-app"
  template:
    metadata:
      labels:
        app: "nbs-csi-node-app"
    spec:
      hostNetwork: true
      serviceAccountName: nbs-csi-node-sa
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: csi-node-driver-registrar
          image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.9.2
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=/csi/csi.sock"
            - "--kubelet-registration-path=/var/lib/kubelet/plugins/nbs.csi.nebius.ai/csi.sock"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
            - name: registration-dir
              mountPath: /registration
        - name: csi-node-driver-external-resizer
          image: registry.k8s.io/sig-storage/csi-resizer:v1.9.0
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=/csi/csi.sock"
            - "--leader-election"
            - "--http-endpoint=:8080"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
              name: http-endpoint
              protocol: TCP
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
            - name: sockets-dir
              mountPath: /run/nbsd/sockets
        - name: csi-nbs-driver
          securityContext:
            privileged: true
          image: nbs-csi-driver:latest
          imagePullPolicy: IfNotPresent
          args:
            - "--name=nbs.csi.nebius.ai"
            - "--version=$(DRIVER_VERSION)"
            - "--node-id=$(KUBE_NODE_NAME)"
            - "--endpoint=/csi/csi.sock"
            - "--vm-mode=true"
            - "--sockets-dir=/run/nbsd/sockets"
            - "--nfs-vhost-port=0"
            - "--nfs-server-port=0"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: kubelet-dir
              mountPath: /var/lib/kubelet
              mountPropagation: "Bidirectional"
            - name: plugin-dir
              mountPath: /csi
            - name: sockets-dir
              mountPath: /run/nbsd/sockets
            - name: dev
              mountPath: /mnt/dev
      volumes:
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
        - name: kubelet-dir
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        - name: plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/nbs.csi.nebius.ai/
            type: DirectoryOrCreate
        - name: sockets-dir
          hostPath:
            path: /run/nbsd/sockets
            type: DirectoryOrCreate
        - name: dev
          hostPath:
            path: /dev
            type: DirectoryOrCreate
