cloud/blockstore/tools/csi_driver/deploy/manifests/6-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nbs-csi-driver-node
  namespace: nbs-csi-ns
spec:
  selector:
    matchLabels:
      app: "nbs-csi-driver"
  template:
    metadata:
      labels:
        app: "nbs-csi-driver"
    spec:
      hostNetwork: true
      serviceAccountName: nbs-csi-node-sa
      nodeSelector:
        kubernetes.io/os: linux
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: node-role.kubernetes.io/control-plane
      #           operator: DoesNotExist
      containers:
        - name: csi-node-driver-registrar
          image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.9.2
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=/csi/csi.sock"
            - "--kubelet-registration-path=/var/lib/kubelet/plugins/nbs.csi.nebius.ai/csi.sock"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
            - name: registration-dir
              mountPath: /registration
        - name: csi-nbs-driver
          securityContext:
            privileged: true
          image: cr.ai.nebius.cloud/crn0l5t3qnnlbpi8de6q/nbs-csi-driver:v0.1
          imagePullPolicy: Always
          args:
            - "--endpoint=/csi/csi.sock"
            - "--node-id=$(KUBE_NODE_NAME)"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: kubelet-dir
              mountPath: /var/lib/kubelet
              mountPropagation: "Bidirectional"
            - name: plugin-dir
              mountPath: /csi
            - name: nbs-dir
              mountPath: /nbs-endpoints
      volumes:
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
        - name: kubelet-dir
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        - name: plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/nbs.csi.nebius.ai/
            type: DirectoryOrCreate
        - name: nbs-dir
          hostPath:
            path: /home/nbsd/endpoints/
            type: DirectoryOrCreate
      tolerations:
      - operator: Exists
