cloud/blockstore/tools/csi_driver/deploy/manifests/6-nbs-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nbs-server-node
  namespace: nbs-csi-ns
spec:
  selector:
    matchLabels:
      app: "nbs-server-app"
  template:
    metadata:
      labels:
        app: "nbs-server-app"
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: nbs-server
          securityContext:
            privileged: true
          image: cr.ai.nebius.cloud/crnvrq2hg2rgmbj3ebr9/nebius-blockstore-server:85.stable-23-3-21
          imagePullPolicy: Always
          volumeMounts:
            - name: nbs-server
              mountPath: /Berkanavt/nbs-server
              readOnly: false
            - name: nbs-configs
              mountPath: /Berkanavt/nbs-server/cfg
              readOnly: true
            - name: nbs-run
              mountPath: /run/nbsd
              readOnly: false
            - name: dev
              mountPath: /mnt/dev
              readOnly: false
      volumes:
        - name: nbs-server-backups
          hostPath:
            path: /Berkanavt/nbs-server/backups
            type: DirectoryOrCreate
        - name: nbs-server-endpoints
          hostPath:
            path: /Berkanavt/nbs-server/endpoints
            type: DirectoryOrCreate
        - name: nbs-configs
          configMap:
            name: nbs-server-config-node
        - name: nbs-run
          hostPath:
            path: /run/nbsd
            type: DirectoryOrCreate
        - name: dev
          hostPath:
            path: /dev
            type: DirectoryOrCreate
        - name: lib-modules
          hostPath:
            path: /lib/modules
            type: DirectoryOrCreate
      imagePullSecrets:
        - name: nbs-puller-secret
