cloud/blockstore/tools/csi_driver/deploy/manifests/curl-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: curl-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-deployment
  namespace: curl-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
        - name: curl-container
          image: curlimages/curl
          command: [ "sleep" ]
          args: [ "infinity" ]
